[package]
name = "simple_ws"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
http = "1.1.0"
clap = { version = "4.5.11", features = ["derive"] }
futures-util = "0.3.30"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
redis = "0.26.0"
axum = { version = "0.7.5", features = ["ws"] }
